add description to title page

--- a/html/title.html
+++ b/html/title.html
@@ -26,6 +26,7 @@
       <h1 class="Welcome">Welcome</h1>
     <div id="begin1">
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
+      <p id="description"> "Title" is an online tool to facilitate learning by combinging the resources of Coursera, Khan Academy, and iTunes U. Begin your educational journey to browse course in Mathematics, Science, History, and Computer Science. Sign in to save your courses for future references.</p>
     </div>
       <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
