Writing my mini bio

--- a/html/credits.html
+++ b/html/credits.html
@@ -27,7 +27,7 @@
         <div class='myname'>Billy Torres</div>
         <img class='biopic' src="../photos/billypic.png"/>
         <p class='minibio'>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
+          Hi there. I'm Billy Torres, I was born in Dominican Republic and live in Bergen County, New Jerey. This fall I will begin my crazy college journey at MIT. I'm interested in computer science, business, philosophy, hair and food. Favorite sitcoms include Fresh Prince of Bel-Air and Friends. Thank you to my buddies Larry and Sergey for creating Google. My summer was awesomely productive and full of great food. #CSSI2015
         </p>
       </div>
 
