circle nav to the home page

--- a/html/home.html
+++ b/html/home.html
@@ -10,28 +10,30 @@
     <script src="../javascript/allscript.js"></script>
   </head>
   <body>
-    <div class="tsop">
-      <a href="/">
-      </a>
-      <header class="mainHeader">
-        <nav><ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="personal">My Page</a></li>
-          <li><a href="credits">Credits/References</a></li>
-        </ul></nav>
-      </header>
-    </div>
+    <div style="min-width: auto; margin: 0 auto;">
+    <body>
+      <div class="tsop">
+        <a href="/">
+        </a>
+        <header class="mainHeader">
+      		<nav><ul>
+      			<li><a href="#">Home</a></li>
+            <li><a href="personal">My Page</a></li>
+      			<li><a href="credits">Credits/References</a></li>
+      		</ul></nav>
+      	</header>
+      </div>
     <div>
       <h1 class="Welcome"></h1>
     </div>
     <div>
     </div>
     <div class="mainwrapper">
-      <div class="main-nav">
-        <div class="bubbles" id="Math"><div>Math</div></div>
-        <div class="bubbles" id="Science"><div>Science</div></div>
-        <div class="bubbles" id="History"><div>History</div></div>
-        <div class="bubbles" id="Comp"><div>Comp Sci</div></div>
+      <div id="linkbubbles">
+        <div class="innertext" id="Math"><div>Math</div></div>
+        <div class="innertext" id="Science"><div>Science</div></div>
+        <div class="innertext" id="Comp"><div>Computer Science</div></div>
+        <div class="innertext" id="History"><div>History</div></div>
       </div>
     </div>
     <div>
