--- a/html/subject.html
+++ b/html/subject.html
@@ -29,17 +29,19 @@
     <form action="personal" method="post">
       <h3>Coursera:</h3>
       <ul id="courseralinks">
-        {% for name, link in coursera_courses.items() %}
-          <li id="linkbubbles"><a href={{link}} target="_blank"> {{name}}</a></li>
-          <input type="radio" name = "chosen_course" value="{{name}}||{{link}}">
-        {% endfor %}
+        <div id="linkbuttonwrapper">
+          {% for name, link in coursera_courses.items() %}
+            <li id="linkbubbles"><div id="innertext"><a href={{link}} target="_blank"> {{name}}</a></div></li>
+            <input type="radio" name = "chosen_course" value="{{name}}||{{link}}">
+          {% endfor %}
+        </div>
       </ul>
       <br>
       <br>
       <h3>Khan Academy:</h3>
       <ul id="khanlinks">
         {% for name, link in khan_courses.items() %}
-          <li id="linkbubbles"><a href={{link}} target="_blank"> {{name}}</a></li>
+          <li id="linkbubbles"><div id="innertext"><a href={{link}} target="_blank"> {{name}}</a></div></li>
           <input type="radio" name = "chosen_course" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
@@ -48,7 +50,7 @@
       <h3>iTunes U:</h3>
       <ul id="ituneslinks">
         {% for name, link in itunes_courses.items() %}
-          <li id="linkbubbles"><a href={{link}} target="_blank"> {{name}}</a></li>
+          <li id="linkbubbles"><div id="innertext"><a href={{link}} target="_blank"> {{name}}</a></div></li>
           <input type="radio" name = "chosen_course" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
