--- a/html/credits.html
+++ b/html/credits.html
@@ -35,7 +35,7 @@
         <div class='myname'>Sofie Cornelis</div>
         <img class='biopic' src="../photos/sofiepic.png"/>
         <p class='minibio'>
-          Hey everyone! My name is Sofie Cornelis and I'm from Manhattan, New York. I will be attending Cornell University in Ithaca, majoring in Information Science and possibly minoring in Food Science and Math. These past three week at CSSI have been amazing. Thank you to all of the instructors, TA, and the other googlers that helped make this possible.
+          Hey everyone! My name is Sofie Cornelis and I'm from Manhattan, New York. I will be attending Cornell University in Ithaca, majoring in Information Science and possibly minoring in Food Science. I worked on the Python, HTML, Javascript, and some of the CSS. These past three week at CSSI have been amazing. Thank you to all of the instructors, TA, and the other googlers that helped make this possible.
         </p>
       </div>
 
