--- a/html/home.html
+++ b/html/home.html
@@ -23,9 +23,7 @@
       		</ul></nav>
       	</header>
       </div>
-    <div>
-      <h1 class="Welcome"></h1>
-    </div>
+      <a href="/login"<p class="login">Login/Logout</p></a>
     <div>
     </div>
     <div class="mainwrapper">
@@ -56,6 +54,5 @@
       <a href ="../subject?search=computer-science"> <img class="bubbles subj csbubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
      </div>
       <!-- <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/> -->
-      <a href="login"<p class="login">Sign Up/Login</p>
   </body>
 </html>
