--- a/html/home.html
+++ b/html/home.html
@@ -17,7 +17,7 @@
         </a>
         <header class="mainHeader">
       		<nav><ul>
-      			<li><a href="#">Home</a></li>
+      			<li><a href="/">Home</a></li>
             <li><a href="personal">My Page</a></li>
       			<li><a href="credits">Credits/References</a></li>
       		</ul></nav>
