--- a/html/subject.html
+++ b/html/subject.html
@@ -26,7 +26,7 @@
     <img id="subjectmainbackground" src="../photos/compscibackground.jpg"/>
     <h1 id="subjecttitle">{{subject.replace("-", " ").title()}}</h1>
 
-    <form action="personal" method="post">
+    <form action="add" method="post">
       <h3>Coursera:</h3>
       <ul id="courseralinks">
         <div id="linkbuttonwrapper">
