--- a/html/subject.html
+++ b/html/subject.html
@@ -25,7 +25,7 @@
     </div>
     <img id="subjectmainbackground" src="../photos/compscibackground.jpg"/>
     <h1 id="subjecttitle">{{subject.replace("-", " ").title()}}</h1>
-
+<div id="formwrapper1">
     <form action="add" method="post">
       <h3>Coursera:</h3>
       <ul id="courseralinks">
@@ -36,6 +36,7 @@
           {% endfor %}
         </div>
       </ul>
+    </div>
       <br>
       <br>
       <h3>Khan Academy:</h3>
