edit to the login page

--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -18,11 +18,15 @@
     </header>
   </div>
   <body>
-    <p>{{greeting}}</p>
+    <div id="greeting1">
+      <p>{{greeting}}</p>
+    </div>
     <br>
-    <a href={{home_or_personal}}> {{h_or_p}}</a>
-    <br>
-    <a href={{login_or_out}}> {{in_out_tag}}</a>
+    <div id="loginpage1"
+      <a href={{home_or_personal}}> {{h_or_p}}</a>
+      <br>
+      <a href={{login_or_out}}> {{in_out_tag}}</a>
+    </div>
 
   </body>
 
