background on personal page

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -25,6 +25,7 @@
     <div id="welcomeuser">
       <h1>Welcome {{nickname}}!</h1>
     </div>
+  <div id="userbar">
     <p>Here are your courses:</p>
     <ul>
       <form action="personal" method="post">
@@ -36,13 +37,14 @@
         <input type="submit" value="Delete Course">
       </form>
     </ul>
+  </div>
     <br>
     <p><a id="signout" href={{logouturl}}>Sign out</a></p>
     <p><a href="home">Browse through courses</a></p>
     <p><a href="/">Go home</a></p>
     <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
-    <source src="../photos/mypagevideobackground.webm" type="video/webm">
-    <source src="../photos/mypagevideobackground.mp4" type="video/mp4">
+    <source src="../photos/physicsbackground.webm" type="video/webm">
+    <source src="../photos/physicsbackground.mp4" type="video/mp4">
     </video>
   </body>
 
