--- a/html/mypage.html
+++ b/html/mypage.html
@@ -26,7 +26,9 @@
       <h1>Welcome {{nickname}}!</h1>
     </div>
   <div id="userbar">
-    <p>Here are your courses:</p>
+    <div id="hereareyourcourses">
+      <p>Here are your courses:</p>
+    </div>
     <ul>
       <form action="personal" method="post">
         {% for course in courses %}
