changes to the login page

--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -22,11 +22,14 @@
       <p>{{greeting}}</p>
     </div>
     <br>
+    <div>
     <a href={{home_or_personal}}> {{h_or_p}}</a>
-    <br>
+    <br></br>
     <a href={{login_or_out}}> {{in_out_tag}}</a>
     </div>
-
+    <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
+    <source src="../photos/loginparticlebackground.webm" type="video/webm">
+    <source src="../photos/loginparticlebackground.mp4" type="video/mp4">
+    </video>
   </body>
-
 </html>
