--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -27,9 +27,9 @@
     <br></br>
     <a href={{login_or_out}}> {{in_out_tag}}</a>
     </div>
-    <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
-    <source src="../photos/loginparticlebackground.webm" type="video/webm">
-    <source src="../photos/loginparticlebackground.mp4" type="video/mp4">
+    <video autoplay loop poster="../photos/spacebackground.mp4" id="bgvid">
+    <source src="../photos/spacebackground.webm" type="video/webm">
+    <source src="../photos/spacebackground.mp4" type="video/mp4">
     </video>
   </body>
 </html>
