correction to the credits page and music

--- a/html/credits.html
+++ b/html/credits.html
@@ -42,8 +42,8 @@
       <div id='andrews'>
         <div class='myname'>Andrews Figueroa</div>
         <img class='biopic' src="../photos/andrewpic.png"/>
-        <p class="outside" class='minibio'>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
+        <p class='minibio'>
+          My name is Andrews Figueroa and like Billy I too was born in the Dominican Republic. I've lived most of my life in Queens, New York, and I will attending Brandeis University. I plan to major in computer science and engineering, with a possible minor in business. I love design, which is why I worked primarily on the CSS and HTML. This site is a testament of our hard work, and dedication. We hope you enjoy it. (Thank you everyone who helped us reach our goal).
         </p>
       </div>
     </div>
