--- a/html/title.html
+++ b/html/title.html
@@ -32,7 +32,7 @@
     <div id="bottom">
       <div id="description"><p id="fontcolor"> "Title" is an online tool to facilitate learning by combinging the resources of Coursera, Khan Academy, and iTunes U. Begin your educational journey to browse course in Mathematics, Science, History, and Computer Science. Sign in to save your courses for future references.</p>
       </div>
-      <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
+      <video controls muted autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
       <source src="../photos/titlephysicsbackground.webm" type="video/webm">
       <source src="../photos/titlephysicsbackground.mp4" type="video/mp4">
       </video>
