--- a/html/mypage.html
+++ b/html/mypage.html
@@ -44,7 +44,7 @@
     <p><a id="signout" href={{logouturl}}>Sign out</a></p>
     <p><a href="home">Browse through courses</a></p>
     <p><a href="/">Go home</a></p>
-    <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
+    <video controls muted autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
     <source src="../photos/physicsbackground.webm" type="video/webm">
     <source src="../photos/physicsbackground.mp4" type="video/mp4">
     </video>
