--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -27,7 +27,7 @@
     <br></br>
     <a href={{login_or_out}}> {{in_out_tag}}</a>
     </div>
-    <video autoplay loop poster="../photos/spacebackground.mp4" id="bgvid">
+    <video muted autoplay loop poster="../photos/spacebackground.mp4" id="bgvid">
     <source src="../photos/spacebackground.webm" type="video/webm">
     <source src="../photos/spacebackground.mp4" type="video/mp4">
     </video>
