--- a/html/title.html
+++ b/html/title.html
@@ -30,7 +30,7 @@
       <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
     <div id="bottom">
-      <div id="description"><p id="fontcolor"> "Title" is an online tool to facilitate learning by combinging the resources of Coursera, Khan Academy, and iTunes U. Begin your educational journey to browse course in Mathematics, Science, History, and Computer Science. Sign in to save your courses for future references.</p>
+      <div id="description"><p id="fontcolor"> "All! the Courses" is an online tool to facilitate learning by combinging the resources of Coursera, Khan Academy, and iTunes U. Begin your educational journey to browse courses in Mathematics, Science, History, and Computer Science. Sign in to save your courses for future references.</p>
       </div>
       <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
       <source src="../photos/titlephysicsbackground.webm" type="video/webm">
