Adding References header

--- a/html/credits.html
+++ b/html/credits.html
@@ -49,6 +49,7 @@
     </div>
 
     <div class='References'>
+      <p id="meet">References:</p>
       <div id='khanapi'>
         <div class='apiname'>Khan Academy</div>
       </div>
