almost final changes

--- a/html/subject.html
+++ b/html/subject.html
@@ -16,12 +16,14 @@
       <a href="/">
       </a>
       <header class="mainHeader">
-    		<nav><ul>
-    			<li><a href="/">Home</a></li>
+        <nav><ul>
+          <li><a href="/">Main</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="personal">My Page</a></li>
-    			<li><a href="credits">Credits/References</a></li>
-    		</ul></nav>
-    	</header>
+          <li><a href="credits">Credits/References</a></li>
+          <li><a href="/login">Login/Logout</a>
+        </ul></nav>
+      </header>
     </div>
     <div id="subjecttitle">
     <h1>{{subject.replace("-", " ").title()}}</h1>
