--- a/html/credits.html
+++ b/html/credits.html
@@ -14,15 +14,16 @@
       </a>
       <header class="mainHeader">
         <nav><ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="/">Main</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="personal">My Page</a></li>
           <li><a href="credits">Credits/References</a></li>
-          <!-- <li><a href="#">Extrablah</a></li> -->
+          <li><a href="/login">Login/Logout</a>
         </ul></nav>
       </header>
     </div>
     <p id="meet">Meet the developers:</p>
-    <div class = 'developers'>
+    <div class = "developers">
       <div id='billy'>
         <div class='myname'>Billy Torres</div>
         <img class='biopic' src="../photos/billypic.png"/>
