--- a/html/home.html
+++ b/html/home.html
@@ -16,14 +16,15 @@
         <a href="/">
         </a>
         <header class="mainHeader">
-      		<nav><ul>
-      			<li><a href="/">Home</a></li>
+          <nav><ul>
+            <li><a href="/">Main</a></li>
+            <li><a href="/home">Home</a></li>
             <li><a href="personal">My Page</a></li>
-      			<li><a href="credits">Credits/References</a></li>
-      		</ul></nav>
-      	</header>
+            <li><a href="credits">Credits/References</a></li>
+            <li><a href="/login">Login/Logout</a>
+          </ul></nav>
+        </header>
       </div>
-      <a href="/login"<p class="login">Login/Logout</p></a>
     <div>
     </div>
     <div class="mainwrapper">
