--- a/html/mypage.html
+++ b/html/mypage.html
@@ -14,12 +14,14 @@
       <a href="/">
       </a>
       <header class="mainHeader">
-    		<nav><ul>
-    			<li><a href="/">Home</a></li>
+        <nav><ul>
+          <li><a href="/">Main</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="personal">My Page</a></li>
           <li><a href="credits">Credits/References</a></li>
-    		</ul></nav>
-    	</header>
+          <li><a href="/login">Login/Logout</a>
+        </ul></nav>
+      </header>
     </div>
   <body>
     <div id="welcomeuser">
@@ -44,10 +46,6 @@
     <p><a id="signout" href={{logouturl}}>Sign out</a></p>
     <p><a href="home">Browse through courses</a></p>
     <p><a href="/">Go home</a></p>
-    <video controls muted autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
-    <source src="../photos/physicsbackground.webm" type="video/webm">
-    <source src="../photos/physicsbackground.mp4" type="video/mp4">
-    </video>
   </body>
 
 </html>
