--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -11,9 +11,11 @@
     </a>
     <header class="mainHeader">
       <nav><ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">Main</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="personal">My Page</a></li>
         <li><a href="credits">Credits/References</a></li>
+        <li><a href="/login">Login/Logout</a>
       </ul></nav>
     </header>
   </div>
@@ -27,9 +29,9 @@
     <br></br>
     <a href={{login_or_out}}> {{in_out_tag}}</a>
     </div>
-    <video muted autoplay loop poster="../photos/spacebackground.mp4" id="bgvid">
-    <source src="../photos/spacebackground.webm" type="video/webm">
-    <source src="../photos/spacebackground.mp4" type="video/mp4">
+    <video muted autoplay loop poster="../photos/loginbackground.mp4" id="bgvid">
+    <source src="../photos/loginbackground.webm" type="video/webm">
+    <source src="../photos/loginbackground.mp4" type="video/mp4">
     </video>
   </body>
 </html>
