--- a/html/title.html
+++ b/html/title.html
@@ -15,24 +15,25 @@
       <a href="/">
       </a>
       <header class="mainHeader">
-    		<nav><ul>
-    			<li><a href="/">Home</a></li>
+        <nav><ul>
+          <li><a href="/">Main</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="personal">My Page</a></li>
-    			<li><a href="credits">Credits/References</a></li>
-    		</ul></nav>
-    	</header>
+          <li><a href="credits">Credits/References</a></li>
+          <li><a href="/login">Login/Logout</a>
+        </ul></nav>
+      </header>
     </div>
     <div>
       <h1 class="Welcome">Welcome</h1>
     <div id="begin1">
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
-      <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
     <div id="bottom">
       <div id="description"><p id="fontcolor"> "Title" is an online tool to facilitate learning by combinging the resources of Coursera, Khan Academy, and iTunes U. Begin your educational journey to browse course in Mathematics, Science, History, and Computer Science. Sign in to save your courses for future references.</p>
       </div>
-      <video controls muted autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
+      <video muted autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
       <source src="../photos/titlephysicsbackground.webm" type="video/webm">
       <source src="../photos/titlephysicsbackground.mp4" type="video/mp4">
       </video>
