--- a/html/subject.html
+++ b/html/subject.html
@@ -17,8 +17,8 @@
       </a>
       <header class="mainHeader">
         <nav><ul>
-          <li><a href="/">Main</a></li>
-          <li><a href="/home">Home</a></li>
+          <li><a href="/">ALL! The Courses</a></li>
+          <!-- <li><a href="/home">Home</a></li> -->
           <li><a href="personal">My Page</a></li>
           <li><a href="credits">Credits/References</a></li>
           <li><a href="/login">Login/Logout</a>
