--- a/html/title.html
+++ b/html/title.html
@@ -25,7 +25,7 @@
       </header>
     </div>
     <div>
-      <h1 class="Welcome">Welcome</h1>
+      <h1 class="Welcome">Turn up</h1>
     <div id="begin1">
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
